[gd_scene load_steps=2 format=3 uid="uid://cs1kggc4d5bew"]

[ext_resource type="Script" path="res://Main.gd" id="1_dilqc"]

[node name="Grid" type="Node2D"]
script = ExtResource("1_dilqc")

[node name="TurnButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Next Turn"

[node name="SaveButton" type="Button" parent="."]
offset_left = 100.0
offset_right = 186.0
offset_bottom = 31.0
text = "Save"

[node name="LoadButton" type="Button" parent="."]
offset_left = 200.0
offset_right = 286.0
offset_bottom = 31.0
text = "Load"

[node name="UndoButton" type="Button" parent="."]
offset_left = 400.0
offset_right = 486.0
offset_bottom = 31.0
text = "Undo"

[node name="RedoButton" type="Button" parent="."]
offset_left = 500.0
offset_right = 586.0
offset_bottom = 31.0
text = "Redo
"

[node name="LevelCompleteLabel" type="Label" parent="."]
top_level = true
z_index = 1
offset_left = 507.0
offset_top = 264.0
offset_right = 631.0
offset_bottom = 300.0
text = "=============
Level Complete!
============="
horizontal_alignment = 2
vertical_alignment = 2

[node name="AutosaveLabel" type="Label" parent="."]
visible = false
offset_left = 361.0
offset_top = 120.0
offset_right = 799.0
offset_bottom = 143.0
text = "Autosave Detected: Would you like to load the autosave?"

[node name="AutosaveButton" type="Button" parent="."]
visible = false
offset_left = 435.0
offset_top = 154.0
offset_right = 557.0
offset_bottom = 185.0
text = "Load Autosave"

[node name="AutosaveCloseButton" type="Button" parent="."]
visible = false
offset_left = 610.0
offset_top = 154.0
offset_right = 660.0
offset_bottom = 185.0
text = "Close"

[connection signal="pressed" from="TurnButton" to="." method="_on_turn_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_turn_button_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_turn_button_pressed"]
[connection signal="pressed" from="UndoButton" to="." method="_on_turn_button_pressed"]
[connection signal="pressed" from="RedoButton" to="." method="_on_turn_button_pressed"]
